--- a/about/about.html
+++ b/about/about.html
@@ -72,70 +72,70 @@
         <div class="col-md-8">
         <h2 class="experience">MY EXPERIENCE</h2>
         
-        <!--TECHNOLOGIES SECTION-->
-        <div class="row tecnologies">
+        <!--PROGRAMME SECTION-->
+        <div class="row programme">
           <div class="col-3 text-center">
-            <i class="fab fa-html5 technology"></i>
+            <i class="fab fa-html5 skill-icon"></i>
             </br>HMTL
           </div>
           <div class="col-3 text-center">
-            <i class="fab fa-css3-alt technology"></i>
+            <i class="fab fa-css3-alt skill-icon"></i>
             </br>CSS
           </div>
           <div class="col-3 text-center">
-            <i class="fab fa-js-square technology"></i>
+            <i class="fab fa-js-square skill-icon"></i>
             </br>JavaScript
           </div>
           <div class="col-3 text-center">
-            <i class="fafa fas fa-code technology"></i>
+            <i class="fafa fas fa-code skill-icon"></i>
             </br>VS Code
           </div>
           <div class="col-3 text-center">
-            <i class="fas fa-th technology"></i>
+            <i class="fas fa-th skill-icon"></i>
             </br>Flexbox
           </div>
           <div class="col-3 text-center">
-            <i class="fab fa-codepen technology"></i>
+            <i class="fab fa-codepen skill-icon"></i>
             </br>Codepen
           </div>
           <div class="col-3 text-center">
-            <i class="far fa-object-group technology"></i>
+            <i class="far fa-object-group skill-icon"></i>
             </br>Wireframing
           </div>
           <div class="col-3 text-center">
-            <i class="fab fa-connectdevelop technology"></i>
+            <i class="fab fa-connectdevelop skill-icon"></i>
             </br>Netlify
           </div>
           <div class="col-3 text-center">
-            <i class="fab fa-github-square technology"></i>
+            <i class="fab fa-github-square skill-icon"></i>
             </br>GitHub
           </div>
           <div class="col-3 text-center">
-            <i class="fas fa-mobile-alt technology"></i>
+            <i class="fas fa-mobile-alt skill-icon"></i>
             </br>Responsive
           </div>
           <div class="col-3 text-center">
-            <i class="fab fa-react technology"></i>
+            <i class="fab fa-react skill-icon"></i>
             </br>React
           </div>
           <div class="col-3 text-center">
-            <i class="fas fa-server technology"></i>
+            <i class="fas fa-server skill-icon"></i>
             </br>Hosting
           </div>
           <div class="col-3 text-center">
-            <i class="fas fa-cogs technology"></i>
+            <i class="fas fa-cogs skill-icon"></i>
             </br>APIs
           </div>
           <div class="col-3 text-center">
-            <i class="fab fa-bootstrap technology"></i>
+            <i class="fab fa-bootstrap skill-icon"></i>
             </br>Bootstrap
           </div>
           <div class="col-3 text-center">
-            <i class="fab fa-invision technology"></i>
+            <i class="fab fa-invision skill-icon"></i>
             </br>Invision
           </div>
           <div class="col-3 text-center">
-            <i class="fab fa-searchengin technology"></i>
+            <i class="fab fa-searchengin skill-icon"></i>
             </br>SEO
           </div>
         </div>
