--- a/projects/projects.html
+++ b/projects/projects.html
@@ -67,15 +67,15 @@
       <!--WEATHER APP LANDSCAPE SECTION-->
       <div class="col-md-6 text-center">
         <h5 class="weather-app">Weather App-Landscape</h5>
-        <i class="fab fa-html5 skills"></i> |
-        <i class="fab fa-css3-alt skills"></i> |
-        <i class="fab fa-js-square skills"></i> |
-        <i class="fab fa-github-square skills"></i> |
-        <i class="fas fa-server skills"></i> |
-        <i class="fas fa-cogs skills"></i> |
-        <i class="fab fa-connectdevelop skills"></i> |
-        <i class="far fa-object-group technology"></i> |
-        <i class="fab fa-bootstrap skills"></i>
+        <i class="fab fa-html5 skill-icon"></i> |
+        <i class="fab fa-css3-alt skill-icon"></i> |
+        <i class="fab fa-js-square skill-icon"></i> |
+        <i class="fab fa-github-square skill-icon"></i> |
+        <i class="fas fa-server skill-icon"></i> |
+        <i class="fas fa-cogs skill-icon"></i> |
+        <i class="fab fa-connectdevelop skill-icon"></i> |
+        <i class="far fa-object-group skill-icon"></i> |
+        <i class="fab fa-bootstrap skill-icon"></i>
         </br>
         <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
           portrait or landscape formats.</p>
@@ -87,15 +87,15 @@
       <!--WEATHER APP PORTRAIT SECTION-->
       <div class="col-md-6 text-center">
         <h5 class="weather-app">Weather App-Portrait</h5>
-        <i class="fab fa-html5 skills"></i> |
-        <i class="fab fa-css3-alt skills"></i> |
-        <i class="fab fa-js-square skills"></i> |
-        <i class="fab fa-github-square skills"></i> |
-        <i class="fas fa-server skills"></i> |
-        <i class="fas fa-cogs skills"></i> |
-        <i class="fab fa-connectdevelop skills"></i> |
-        <i class="far fa-object-group technology"></i> |
-        <i class="fab fa-bootstrap skills"></i>
+        <i class="fab fa-html5 skill-icon"></i> |
+        <i class="fab fa-css3-alt skill-icon"></i> |
+        <i class="fab fa-js-square skill-icon"></i> |
+        <i class="fab fa-github-square skill-icon"></i> |
+        <i class="fas fa-server skill-icon"></i> |
+        <i class="fas fa-cogs skill-icon"></i> |
+        <i class="fab fa-connectdevelop skill-icon"></i> |
+        <i class="far fa-object-group skill-icon"></i> |
+        <i class="fab fa-bootstrap skill-icon"></i>
         </br>
         <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
           portrait or landscape formats.</p>
@@ -106,27 +106,33 @@
 
       <!--ARCTIC MONKEYS SECTION-->
       <div class="col-md-6 text-center">
-        <h5 class="weather-app">Arctic Monkeys-Fan Page</h5>
-        <i class="fab fa-html5 skills"></i> |
-        <i class="fab fa-css3-alt skills"></i> |
-        <i class="fab fa-js-square skills"></i>
-        </br>
+        <h5 class="arctic-monkeys">Arctic Monkeys-Fan Page</h5>
+        <i class="fab fa-html5 skill-icon"></i> |
+        <i class="fab fa-css3-alt skill-icon"></i> |
+        <i class="fab fa-js-square skill-icon"></i> |
+        <i class="fab fa-github-square skill-icon"></i> |
+        <i class="fas fa-server skill-icon"></i> |
+        <i class="fas fa-cogs skill-icon"></i> |
+        <i class="fab fa-connectdevelop skill-icon"></i>
+        <br/>
         <p>Coming soon.</p>
+        <img src="/images/arctic-monkeys-page.png" class="img-fluid arctic-monkeys-page" />
+        <br />
         <a class="btn project-link" href="/projects/arctic-monkeys/index.html" target="_blank">Go to project</a>
       </div>
 
       <!--DICTIONARY SECTION-->
       <div class="col-md-6 text-center">
         <h5 class="weather-app">Dictionary</h5>
-        <i class="fab fa-html5 skills"></i> |
-        <i class="fab fa-css3-alt skills"></i> |
-        <i class="fab fa-js-square skills"></i> |
-        <i class="fab fa-github-square skills"></i> |
-        <i class="fas fa-server skills"></i> |
-        <i class="fas fa-cogs skills"></i> |
-        <i class="fab fa-connectdevelop skills"></i> |
-        <i class="far fa-object-group technology"></i> |
-        <i class="fab fa-bootstrap skills"></i>
+        <i class="fab fa-html5 skill-icon"></i> |
+        <i class="fab fa-css3-alt skill-icon"></i> |
+        <i class="fab fa-js-square skill-icon"></i> |
+        <i class="fab fa-github-square skill-icon"></i> |
+        <i class="fas fa-server skill-icon"></i> |
+        <i class="fas fa-cogs skill-icon"></i> |
+        <i class="fab fa-connectdevelop skill-icon"></i> |
+        <i class="far fa-object-group skill-icon"></i> |
+        <i class="fab fa-bootstrap skill-icon"></i>
         </br>
         <p>Coming soon.</p>
         <img src="" class="" />
