--- a/projects/arctic-monkeys/index.html
+++ b/projects/arctic-monkeys/index.html
@@ -5,7 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arctic Monkeys</title>
+  <script src="https://kit.fontawesome.com/b2f3d5d839.js" crossorigin="anonymous"></script>
+
   <style>
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 10px 10px;
+    }
+
     h1 {
       text-align: center;
       color: #d8c2a5;
@@ -71,21 +79,9 @@
     }
 
     img {
-      max-width: 100%;
+      max-width: 100%;;
       display: block;
       margin: 0 auto;
-    }
-
-    ul {
-      text-align: center;
-      list-style: none;
-      padding: 10px;
-    }
-
-    li {
-      display: inline-block;
-      position: relative;
-      margin: 0 10px;
     }
 
     a {
@@ -99,12 +95,12 @@
       cursor: pointer;
     }
 
-    .container {
-      background: linear-gradient(#ffffff, #d8c2a5, #ffffff, #d8c2a5);
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 10px 10px;
+    .social-icons {
+      text-align: center;
+      font-size: 40px;
+      padding: 10px;
     }
+    
   </style>
 </head>
 
@@ -113,7 +109,7 @@
     <h1>ARCTIC MONKEYS</h1>
     <hr />
     <h2>Arctic Monkeys are an English rock band formed in Sheffield in 2002.</h2>
-    <img src="https://www.clashmusic.com/sites/default/files/field/image/hero-14355-1316021305.jpg" />
+    <img src="img/arctic-monkeys.jpg" />
     <p>
       The group consists of <strong>Alex Turner</strong> (lead vocals, guitar, keyboards), <strong>Jamie Cook</strong>
       (guitar, keyboards), <strong>Nick O'Malley</strong> (bass guitar, backing vocals), and <strong>Matt
@@ -130,14 +126,12 @@
       Their debut album, <a href="https://open.spotify.com/album/50Zz8CkIhATKUlQMbHO3k1" target="_blank">
         <strong>Whatever People Say I Am, That's What I'm Not</strong></a> (2006), became the fastest selling debut
       album in UK chart history, and has been hailed as one of the greatest debut albums. It won Best British Album at
-      the 2007 BRIT
-      Awards.
+      the 2007 BRIT Awards.
       <br />
       <br />
       The band's second album, <a href="https://open.spotify.com/album/1XkGORuUX2QGOEIL4EbJKm"
         target="_blank"><strong>Favourite Worst Nightmare</strong></a> (2007), also won Best British Album at the 2008
-      BRIT Awards. They
-      went on to release <a href="https://open.spotify.com/album/5IEoiwkThhRmSMBANhpxl2"
+      BRIT Awards. They went on to release <a href="https://open.spotify.com/album/5IEoiwkThhRmSMBANhpxl2"
         target="_blank"><strong>Humbug</strong></a> (2009) and <a
         href="https://open.spotify.com/album/2ym2jcqckXqWeTDoxz3Kst" target="_blank"><strong>Suck It and
           See</strong></a> (2011).
@@ -146,14 +140,13 @@
       But it was with their fifth album <a href="https://open.spotify.com/album/78bpIziExqiI9qztvNFlQu"
         target="_blank"><strong>AM</strong></a>
       (2013) where the band's global recognition increased, which was supported by the global hit "Do I Wanna Know?". AM
-      became their
-      second top 10 album on the US Billboard 200, topped four Billboard charts, and was certified platinum in the US.
-      In the United
-      Kingdom, Arctic Monkeys became the first independent-label band to debut at number one in the UK with their first
-      five albums.
-      AM also went on to be one of the UK's best-selling vinyl albums of the decade, selling 73,000 units and has earned
-      4× Platinum
-      there. At the 2014 BRIT Awards, the album became their third to win British Album of the Year.
+      became their second top 10 album on the US Billboard 200, topped four Billboard charts, and was certified platinum
+      in the US.
+      In the United Kingdom, Arctic Monkeys became the first independent-label band to debut at number one in the UK
+      with their first
+      five albums. AM also went on to be one of the UK's best-selling vinyl albums of the decade, selling 73,000 units
+      and has earned
+      4× Platinum there. At the 2014 BRIT Awards, the album became their third to win British Album of the Year.
       <br />
       <br />
       Their sixth album, <a href="https://open.spotify.com/album/7v6FNgLDS8KmaWA1amUtqe" target="_blank">
@@ -169,38 +162,23 @@
     <h3> Want to know when they're playing near you?</h3>
     <br />
     <button>Sign up to our mailing list</button>
-    <ul>
-      <li>
-        <a href="https://www.facebook.com/ArcticMonkeys" target="_blank">
-          <img src="https://www.flaticon.com/svg/static/icons/svg/20/20673.svg" width="40px" />
-        </a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/arcticmonkeys/feed/" target="_blank">
-          <img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384015.svg" width="40px" />
-        </a>
-      </li>
-      <li>
-        <a href="https://twitter.com/ArcticMonkeys" target="_blank">
-          <img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384006.svg" width="40px" />
-        </a>
-      </li>
-      <li>
-        <a href="https://music.apple.com/gb/artist/arctic-monkeys/62820413" target="_blank">
-          <img src="https://www.flaticon.com/svg/static/icons/svg/860/860780.svg" width="40px" />
-        </a>
-      </li>
-      <li>
-        <a href="https://open.spotify.com/artist/7Ln80lUS6He07XvHI8qqHH" target="_blank">
-          <img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111685.svg" width="40px" />
-        </a>
-      </li>
-      <li>
-        <a href="https://www.youtube.com/channel/UC-KTRBl9_6AX10-Y7IKwKdw" target="_blank">
-          <img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384012.svg" width="40px" />
-        </a>
-      </li>
-    </ul>
+
+    <div class="social-icons">
+      <a class="text-muted" href="https://www.facebook.com/ArcticMonkeys" target="_blank"
+        title="Arctic Monkeys Facebook"><i class="fab fa-facebook-square"></i></a>
+      <a class="text-muted" href="https://www.instagram.com/arcticmonkeys/feed/" target="_blank"
+        title="Arctic Monkeys Instagram"><i class="fab fa-instagram-square"></i></a>
+      <a class="text-muted" href="https://twitter.com/ArcticMonkeys" target="_blank" title="Arctic Monkeys Twitter"><i
+          class="fab fa-twitter-square"></i></a>
+      <a class="text-muted" href="https://music.apple.com/gb/artist/arctic-monkeys/62820413" target="_blank"
+        title="Arctic Monkeys Apple Music"><i class="fab fa-itunes"></i></a>
+      <a class="text-muted" href="https://open.spotify.com/artist/7Ln80lUS6He07XvHI8qqHH" target="_blank"
+        title="Arctic Monkeys Spotify"><i class="fab fa-spotify"></i></a>
+      <a class="text-muted" href="https://www.youtube.com/channel/UC-KTRBl9_6AX10-Y7IKwKdw" target="_blank"
+        title="Arctic Monkeys Youtube"><i class="fab fa-youtube-square"></i></a>
+    </div>
+
+
     <p>Coded by Eleanor Gedge</p>
     <script>
       function signUp() {
@@ -216,6 +194,7 @@
           heading.innerHTML = `Hi ` + name + `, you're now signed up to hear all the latest Arctic Monkeys news. We'll also let you know if they're playing in ` + city + ` soon! Why not check out their <a href="https://www.arcticmonkeys.com/" target="_blank"> website</a>?`
         }
       }
+
       let signUpButton = document.querySelector("button");
       signUpButton.addEventListener("click", signUp);
     </script>
