updated about page

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 <body>
   <!--NAVIGATION BAR SECTION-->
   <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="/home.html">ELEANOR GEDGE</a>
+    <a class="navbar-brand" href="/home.html"><img src="/images/eglogo.png" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -52,27 +52,10 @@
     <!--INTRODUCTION SECTION-->
     <div class="introduction">
       <h1>ELEANOR GEDGE</h1>
+      <hr />
     </div>
-
-    <hr />
-
-    <div class="row">
-
-      <!--ABOUT ME SECTION-->
-      <div class="col-md-4 about-me">
-        <h2 class="about-me">ABOUT ME</h2>
-        <h5>Aspiring front-end developer from Stamford, UK</h5>
-        <p>
-          Currently in the role of Assistant Marketing Manager specialising in Loyalty and CRM
-          for a quick service restaurant brand, with an aspiration of becoming a front-end
-          developer.
-        </p>
-      </div>
-
-      <!--MY PROJECTS SECTION-->
-      <div class="col-md-8">
-      </div>
-    </div>
+    <h5>Aspiring front-end developer from Stamford, UK</h5>
+    <h5 class="blurb">I like to make websites look nice.</h5>
 
     <!--FOOTER SECTION-->
     <hr />
