--- a/projects/projects.html
+++ b/projects/projects.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ELEANOR GEDGE - FRONT END DEVELOPER</title>
+  <title>ELEANOR GEDGE - MY PROJECTS</title>
 
   <!--JS SECTION-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -32,7 +32,7 @@
 <body>
   <!--NAVIGATION BAR SECTION-->
   <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="/home.html">ELEANOR GEDGE</a>
+    <a class="navbar-brand" href="/home.html"><img src="/images/eglogo.png" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
