updated font size when on mobile

--- a/about/about.html
+++ b/about/about.html
@@ -71,19 +71,14 @@
       <!--MY PROJECTS SECTION-->
       <div class="col-md-8 experience">
         <h2 class="experience-title">EXPERIENCE</h2>
-        <p>
         <h5>PRODUCT DEVELOPMENT</h5>
-        I have a good understanding of how the internet works as well as front end development (HTML, CSS and JS)
-        and best coding practises.
-        <br />
-        <br />
+        <p>I have a good understanding of how the internet works as well as front end development (HTML, CSS and JS)
+        and best coding practises.</p>
         <h5>PRODUCT DESIGN</h5>
-        I know the basics of user-experience and user-interface and have experience converting my sketches into
-        actual pixels.
-        <br />
-        <br />
+        <p>I know the basics of user-experience and user-interface and have experience converting my sketches into
+        actual pixels.</p>
         <h5>PRODUCT MANAGEMENT</h5>
-        I have knowledge of how to validate my work, including the tools required to manage my projects and how to
+        <p>I have knowledge of how to validate my work, including the tools required to manage my projects and how to
         have conversations with developers.
         </p>
 
