--- a/about/about.html
+++ b/about/about.html
@@ -63,28 +63,32 @@
         <h5>Aspiring front-end developer from Stamford, UK</h5>
         <p>
           Currently in the role of Assistant Marketing Manager specialising in Loyalty and CRM
-          for a quick service restaurant brand, with an aspiration of becoming a front-end
+          for a quick service restaurant brand, I have an aspiration of becoming a front-end
           developer.
-        </p>
+          <br/>
+          I love creating functional and responsive designs for optimal user experience. My career in CRM 
+          and the digital field has honed my passion for attention to detail and well designed, efficient 
+          platforms and systems.         </p>
       </div>
 
       <!--MY PROJECTS SECTION-->
       <div class="col-md-8 experience">
         <h2 class="experience-title">EXPERIENCE</h2>
-        <h5>PRODUCT DEVELOPMENT</h5>
+        <br />
+        <h5><strong>PRODUCT DEVELOPMENT</strong></h5>
         <p>I have a good understanding of how the internet works as well as front end development (HTML, CSS and JS)
-        and best coding practises.</p>
-        <h5>PRODUCT DESIGN</h5>
+          and best coding practises.</p>
+        <h5><strong>PRODUCT DESIGN</strong></h5>
         <p>I know the basics of user-experience and user-interface and have experience converting my sketches into
-        actual pixels.</p>
-        <h5>PRODUCT MANAGEMENT</h5>
+          actual pixels.</p>
+        <h5><strong>PRODUCT MANAGEMENT</strong></h5>
         <p>I have knowledge of how to validate my work, including the tools required to manage my projects and how to
-        have conversations with developers.
+          have conversations with developers.
         </p>
-
+        <br />
         <!--PROGRAMME SECTION-->
         <h2 class="technologies-title">TECHNOLOGIES</h2>
-        <br/>
+        <br />
         <div class="row programme">
           <div class="col-3 text-center">
             <i class="fab fa-html5 skill-icon"></i>
@@ -160,20 +164,20 @@
     <footer>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-6 copyright">2021 Eleanor Gedge
+          <div class="col-sm-6 copyright">
+            Eleanor Gedge
           </div>
           <div class="col-sm-6 social-icons">
-            <a class="text-muted" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
+            <a class="social-icons" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
               title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
-            <a class="text-muted" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
+            <a class="social-icons" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
                 class="fab fa-github"></i></a>
-            <a class="text-muted" href="https://www.instagram.com/elliegedgex/" target="_blank"
+            <a class="social-icons" href="https://www.instagram.com/elliegedgex/" target="_blank"
               title="Instagram Profile"><i class="fab fa-instagram"></i></a>
-            <a class="text-muted" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
+            <a class="social-icons" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
                 class="far fa-envelope"></i></a>
           </div>
         </div>
-      </div>
     </footer>
 </body>
 
