--- a/projects/projects.html
+++ b/projects/projects.html
@@ -53,17 +53,9 @@
     <div class="introduction">
       <h1>ELEANOR GEDGE</h1>
     </div>
-
     <hr />
 
-    <!--MY PROJECTS SECTION-->
-    <div class="projects">
-      <h2>MY PROJECTS</h2>
-      <h5>Explore my projects below</h5>
-    </div>
-
     <div class="row">
-
       <!--WEATHER APP LANDSCAPE SECTION-->
       <div class="col-md-6 text-center">
         <h5 class="weather-app">Weather App-Landscape</h5>
@@ -77,8 +69,10 @@
         <i class="far fa-object-group skill-icon"></i> |
         <i class="fab fa-bootstrap skill-icon"></i>
         </br>
-        <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
-          portrait or landscape formats.</p>
+        <p>Fully functioning weather app built using Javascript, injected with real life data using an API from
+          openweather.org.
+          Check the current weather or 7 day forecast of any location around the world using the search bar or use the
+          geo-location tool to find the weather in your local area. Explore the landscape version of my weather app.</p>
         <img src="/images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
         <br />
         <a class="btn project-link" href="/projects/weather-app-landscape/index.html" target="_blank">Go to project</a>
@@ -97,8 +91,10 @@
         <i class="far fa-object-group skill-icon"></i> |
         <i class="fab fa-bootstrap skill-icon"></i>
         </br>
-        <p>Fully functioning weather app, injected with real life data using an API from openweather.org. Available in
-          portrait or landscape formats.</p>
+        <p>Fully functioning weather app built using Javascript, injected with real life data using an API from
+          openweather.org.
+          Check the current weather or 7 day forecast of any location around the world using the search bar or use the
+          geo-location tool to find the weather in your local area. Explore the portrait version of my weather app.</p>
         <img src="/images/weather-app-portrait.PNG" class="img-fluid weather-app-portrait" />
         <br />
         <a class="btn project-link" href="/projects/weather-app-portrait/index.html" target="_blank">Go to project</a>
@@ -114,8 +110,9 @@
         <i class="fas fa-server skill-icon"></i> |
         <i class="fas fa-cogs skill-icon"></i> |
         <i class="fab fa-connectdevelop skill-icon"></i>
-        <br/>
-        <p>Coming soon.</p>
+        <br />
+        <p>Single webpage built using HTML, CSS and Javascript prompts and alerts. Now adapted to be responsive to any
+          device size.</p>
         <img src="/images/arctic-monkeys-page.png" class="img-fluid arctic-monkeys-page" />
         <br />
         <a class="btn project-link" href="/projects/arctic-monkeys/index.html" target="_blank">Go to project</a>
@@ -132,9 +129,10 @@
         <i class="fas fa-cogs skill-icon"></i> |
         <i class="fab fa-connectdevelop skill-icon"></i> |
         <i class="far fa-object-group skill-icon"></i> |
-        <i class="fab fa-bootstrap skill-icon"></i>
+        <i class="fab fa-bootstrap skill-icon"></i> |
+        <i class="fab fa-react skill-icon"></i>
         </br>
-        <p>Coming soon.</p>
+        <p>Dictionary built using React is coming soon. Come back later to explore my next project!</p>
         <img src="" class="" />
         <a class="btn project-link" href="" target="_blank">Coming soon</a>
       </div>
@@ -146,16 +144,16 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-6 copyright">
-            2021 Eleanor Gedge
+            Eleanor Gedge
           </div>
           <div class="col-sm-6 social-icons">
-            <a class="text-muted" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
+            <a class="social-icons" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
               title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
-            <a class="text-muted" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
+            <a class="social-icons" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
                 class="fab fa-github"></i></a>
-            <a class="text-muted" href="https://www.instagram.com/elliegedgex/" target="_blank"
+            <a class="social-icons" href="https://www.instagram.com/elliegedgex/" target="_blank"
               title="Instagram Profile"><i class="fab fa-instagram"></i></a>
-            <a class="text-muted" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
+            <a class="social-icons" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
                 class="far fa-envelope"></i></a>
           </div>
         </div>
