--- a/contact/contact.html
+++ b/contact/contact.html
@@ -62,20 +62,19 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-6 copyright">
-            2021 Eleanor Gedge
+            Eleanor Gedge
           </div>
           <div class="col-sm-6 social-icons">
-            <a class="text-muted" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
+            <a class="social-icons" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
               title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
-            <a class="text-muted" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
+            <a class="social-icons" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
                 class="fab fa-github"></i></a>
-            <a class="text-muted" href="https://www.instagram.com/elliegedgex/" target="_blank" title="Instagram Profile"><i
-                class="fab fa-instagram"></i></a>
-            <a class="text-muted" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
+            <a class="social-icons" href="https://www.instagram.com/elliegedgex/" target="_blank"
+              title="Instagram Profile"><i class="fab fa-instagram"></i></a>
+            <a class="social-icons" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
                 class="far fa-envelope"></i></a>
           </div>
         </div>
-      </div>
     </footer>
   </div>
 </body>
