--- a/home.html
+++ b/home.html
@@ -57,8 +57,12 @@
 <hr />
 
 
-<h5 class="about-me">I like to make websites look nice.</h5>
-    <br />
+<h5 class="about-me">I like to make websites look nice on every device.</h5>
+<div class="text-center">
+<a class="btn homepage-links" href="/about/about.html">About Me</a>
+<a class="btn homepage-links" href="/projects/projects.html">My Projects</a>
+<a class="btn homepage-links" href="/contact/contact.html">Contact Me</a>
+</div>
 
     <!--FOOTER SECTION-->
     <hr />
