--- a/projects/projects.html
+++ b/projects/projects.html
@@ -75,7 +75,7 @@
           geo-location tool to find the weather in your local area. Explore the landscape version of my weather app.</p>
         <img src="/images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
         <br />
-        <a class="btn project-link" href="/projects/weather-app-landscape/index.html" target="_blank">Go to project</a>
+        <a class="btn project-links" href="/projects/weather-app-landscape/index.html" target="_blank">Go to project</a>
       </div>
 
       <!--WEATHER APP PORTRAIT SECTION-->
@@ -97,7 +97,7 @@
           geo-location tool to find the weather in your local area. Explore the portrait version of my weather app.</p>
         <img src="/images/weather-app-portrait.PNG" class="img-fluid weather-app-portrait" />
         <br />
-        <a class="btn project-link" href="/projects/weather-app-portrait/index.html" target="_blank">Go to project</a>
+        <a class="btn project-links" href="/projects/weather-app-portrait/index.html" target="_blank">Go to project</a>
       </div>
 
       <!--ARCTIC MONKEYS SECTION-->
@@ -115,7 +115,7 @@
           device size.</p>
         <img src="/images/arctic-monkeys-page.png" class="img-fluid arctic-monkeys-page" />
         <br />
-        <a class="btn project-link" href="/projects/arctic-monkeys/index.html" target="_blank">Go to project</a>
+        <a class="btn project-links" href="/projects/arctic-monkeys/index.html" target="_blank">Go to project</a>
       </div>
 
       <!--DICTIONARY SECTION-->
@@ -134,7 +134,7 @@
         </br>
         <p>Dictionary built using React is coming soon. Come back later to explore my next project!</p>
         <img src="" class="" />
-        <a class="btn project-link" href="" target="_blank">Coming soon</a>
+        <a class="btn project-links" href="" target="_blank">Coming soon</a>
       </div>
     </div>
 
