--- a/home.html
+++ b/home.html
@@ -49,41 +49,37 @@
 
   <div class="container">
 
-<!--INTRODUCTION SECTION-->
-<div class="introduction">
-  <h1>ELEANOR GEDGE</h1>
-  <h5>Aspiring front-end developer from Stamford, UK</h5>
-</div>
-<hr />
-
-
-<h5 class="about-me">I like to make websites look nice on every device.</h5>
-<div class="text-center">
-<a class="btn homepage-links" href="/about/about.html">About Me</a>
-<a class="btn homepage-links" href="/projects/projects.html">My Projects</a>
-<a class="btn homepage-links" href="/contact/contact.html">Contact Me</a>
-</div>
-
-    <!--FOOTER SECTION-->
+    <!--INTRODUCTION SECTION-->
+    <div class="introduction">
+      <h1>ELEANOR GEDGE</h1>
+      <h5>Aspiring front-end developer from Stamford, UK</h5>
+    </div>
     <hr />
-    <footer>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-6 copyright">
-            Eleanor Gedge
+
+
+    <h3 class="about-me">I like to make websites look good on every device.</h5>
+
+
+      <!--FOOTER SECTION-->
+      <hr />
+      <footer>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-6 copyright">
+              Eleanor Gedge
+            </div>
+            <div class="col-sm-6 social-icons">
+              <a class="social-icons" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
+                title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
+              <a class="social-icons" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
+                  class="fab fa-github"></i></a>
+              <a class="social-icons" href="https://www.instagram.com/elliegedgex/" target="_blank"
+                title="Instagram Profile"><i class="fab fa-instagram"></i></a>
+              <a class="social-icons" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
+                  class="far fa-envelope"></i></a>
+            </div>
           </div>
-          <div class="col-sm-6 social-icons">
-            <a class="social-icons" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
-              title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
-            <a class="social-icons" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
-                class="fab fa-github"></i></a>
-            <a class="social-icons" href="https://www.instagram.com/elliegedgex/" target="_blank"
-              title="Instagram Profile"><i class="fab fa-instagram"></i></a>
-            <a class="social-icons" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
-                class="far fa-envelope"></i></a>
-          </div>
-        </div>
-    </footer>
+      </footer>
 </body>
 
 </html>
