updates to about me page

--- a/about/about.html
+++ b/about/about.html
@@ -52,29 +52,30 @@
     <!--INTRODUCTION SECTION-->
     <div class="introduction">
       <h1>ELEANOR GEDGE</h1>
+      <h5>Aspiring front-end developer from Stamford, UK</h5>
     </div>
     <hr />
 
     <div class="row">
 
       <!--ABOUT ME SECTION-->
-      <div class="col-md-4 about-me">
+      <div class="col-md-5 about-me">
         <h2 class="about-me">ABOUT ME</h2>
-        <h5>Aspiring front-end developer from Stamford, UK</h5>
         <p>
           Currently in the role of Assistant Marketing Manager specialising in Loyalty and CRM
           for a quick service restaurant brand, I have an aspiration of becoming a front-end
           developer.
+          <br />
           <br/>
-          I love creating functional and responsive designs for optimal user experience. My career in CRM 
-          and the digital field has honed my passion for attention to detail and well designed, efficient 
-          platforms and systems.         </p>
+          I love creating functional and responsive designs for optimal user experience. My career in CRM
+          and the digital field has honed my passion for attention to detail and well designed, efficient
+          platforms and systems.
+        </p>
       </div>
 
       <!--MY PROJECTS SECTION-->
-      <div class="col-md-8 experience">
+      <div class="col-md-7 experience">
         <h2 class="experience-title">EXPERIENCE</h2>
-        <br />
         <h5><strong>PRODUCT DEVELOPMENT</strong></h5>
         <p>I have a good understanding of how the internet works as well as front end development (HTML, CSS and JS)
           and best coding practises.</p>
@@ -85,11 +86,15 @@
         <p>I have knowledge of how to validate my work, including the tools required to manage my projects and how to
           have conversations with developers.
         </p>
-        <br />
-        <!--PROGRAMME SECTION-->
+      </div>
+
+      <!--TECHNOLOGIES SECTION-->
+      <div class="technologies">
+        </br>
         <h2 class="technologies-title">TECHNOLOGIES</h2>
         <br />
-        <div class="row programme">
+        <div class="row technology">
+
           <div class="col-3 text-center">
             <i class="fab fa-html5 skill-icon"></i>
             </br>HMTL
@@ -156,29 +161,29 @@
           </div>
         </div>
       </div>
-    </div>
+  </div>
 
 
-    <!--FOOTER SECTION-->
-    <hr />
-    <footer>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-6 copyright">
-            Eleanor Gedge
-          </div>
-          <div class="col-sm-6 social-icons">
-            <a class="social-icons" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
-              title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
-            <a class="social-icons" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
-                class="fab fa-github"></i></a>
-            <a class="social-icons" href="https://www.instagram.com/elliegedgex/" target="_blank"
-              title="Instagram Profile"><i class="fab fa-instagram"></i></a>
-            <a class="social-icons" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
-                class="far fa-envelope"></i></a>
-          </div>
+  <!--FOOTER SECTION-->
+  <hr />
+  <footer>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-6 copyright">
+          Eleanor Gedge
         </div>
-    </footer>
+        <div class="col-sm-6 social-icons">
+          <a class="social-icons" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
+            title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
+          <a class="social-icons" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
+              class="fab fa-github"></i></a>
+          <a class="social-icons" href="https://www.instagram.com/elliegedgex/" target="_blank"
+            title="Instagram Profile"><i class="fab fa-instagram"></i></a>
+          <a class="social-icons" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
+              class="far fa-envelope"></i></a>
+        </div>
+      </div>
+  </footer>
 </body>
 
 </html>
