--- a/contact/contact.html
+++ b/contact/contact.html
@@ -52,6 +52,7 @@
     <!--INTRODUCTION SECTION-->
     <div class="introduction">
       <h1>ELEANOR GEDGE</h1>
+            <h5>Aspiring front-end developer from Stamford, UK</h5>
     </div>
     <hr />
     COMING SOON
