--- a/about/about.html
+++ b/about/about.html
@@ -52,7 +52,7 @@
     <!--INTRODUCTION SECTION-->
     <div class="introduction">
       <h1>ELEANOR GEDGE</h1>
-      <h5>Aspiring front-end developer from Stamford, UK</h5>
+            <h5>Aspiring front-end developer from Stamford, UK</h5>
     </div>
     <hr />
 
@@ -60,7 +60,7 @@
 
       <!--ABOUT ME SECTION-->
       <div class="col-md-5 about-me">
-        <h2 class="about-me">ABOUT ME</h2>
+        <h4 class="about-me">ABOUT ME</h4>
         <p>
           Currently in the role of Assistant Marketing Manager specialising in Loyalty and CRM
           for a quick service restaurant brand, I have an aspiration of becoming a front-end
@@ -75,7 +75,7 @@
 
       <!--MY PROJECTS SECTION-->
       <div class="col-md-7 experience">
-        <h2 class="experience-title">EXPERIENCE</h2>
+        <h4 class="experience-title">EXPERIENCE</h4>
         <h5><strong>PRODUCT DEVELOPMENT</strong></h5>
         <p>I have a good understanding of how the internet works as well as front end development (HTML, CSS and JS)
           and best coding practises.</p>
@@ -91,9 +91,9 @@
       <!--TECHNOLOGIES SECTION-->
       <div class="technologies">
         </br>
-        <h2 class="technologies-title">TECHNOLOGIES</h2>
+        <h4 class="technologies-title">TECHNOLOGIES</h4>
         <br />
-        <div class="row technology">
+        <div class="row technologies">
 
           <div class="col-3 text-center">
             <i class="fab fa-html5 skill-icon"></i>
