--- a/about/about.html
+++ b/about/about.html
@@ -32,7 +32,7 @@
 <body>
   <!--NAVIGATION BAR SECTION-->
   <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="/home.html"><img src="/images/eglogo.png" class="logo"></a>
+    <a class="navbar-brand" href="/home.html"><img src="" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -60,16 +60,16 @@
 
       <!--ABOUT ME SECTION-->
       <div class="col-md-5 about-me">
-        <h4 class="about-me">ABOUT ME</h4>
+        <h4 class="about-me-title">ABOUT ME</h4>
         <p>
           Currently in the role of Assistant Marketing Manager specialising in Loyalty and CRM
           for a quick service restaurant brand, I have an aspiration of becoming a front-end
           developer.
           <br />
           <br />
-          I love creating functional and responsive designs for optimal user experience. My career in CRM
+          I love creating functional and responsive website designs for optimal user experience. My career in CRM
           and the digital field has honed my passion for attention to detail and well designed, efficient
-          platforms and systems.
+          platforms and systems. 
         </p>
       </div>
 
@@ -90,9 +90,7 @@
 
       <!--TECHNOLOGIES SECTION-->
       <div class="technologies">
-        </br>
         <h4 class="technologies-title">TECHNOLOGIES</h4>
-        <br />
         <div class="row technologies">
 
           <div class="col-3 text-center">
