--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 <body>
   <!--NAVIGATION BAR SECTION-->
   <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="/home.html"><img src="/images/eglogo.png" class="logo"></a>
+    <a class="navbar-brand" href="/home.html"><img src="" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,17 @@
       <h5>Aspiring front-end developer from Stamford, UK</h5>
     </div>
     <hr />
-    <h3 class="about-me">I like to make websites look good on every device.</h3>
+
+    <!--BLURB SECTION-->
+    <h5 class="about-me">
+      <br />
+      <br />
+      I like to make websites look good on every device.
+      <br />
+      <br />
+      <br />
+    </h5>
+
     <!--FOOTER SECTION-->
     <hr />
     <footer>
