--- a/contact/contact.html
+++ b/contact/contact.html
@@ -32,7 +32,7 @@
 <body>
   <!--NAVIGATION BAR SECTION-->
   <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="/home.html"><img src="/images/eglogo.png" class="logo"></a>
+    <a class="navbar-brand" href="/home.html"><img src="" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
