--- a/projects/projects.html
+++ b/projects/projects.html
@@ -32,7 +32,7 @@
 <body>
   <!--NAVIGATION BAR SECTION-->
   <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="/home.html"><img src="/images/eglogo.png" class="logo"></a>
+    <a class="navbar-brand" href="/home.html"><img src="" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -59,7 +59,7 @@
     <div class="row">
       <!--WEATHER APP LANDSCAPE SECTION-->
       <div class="col-md-6 text-center">
-        <h4 class="weather-app">Weather App-Landscape</h4>
+        <h4 class="project-title">Weather App-Landscape</h4>
         <i class="fab fa-html5 skill-icon"></i> |
         <i class="fab fa-css3-alt skill-icon"></i> |
         <i class="fab fa-js-square skill-icon"></i> |
@@ -74,14 +74,14 @@
           openweather.org.
           Check the current weather or 7 day forecast of any location around the world using the search bar or use the
           geo-location tool to find the weather in your local area. Explore the landscape version of my weather app.</p>
-        <img src="/images/weather-app-landscape.png" class="img-fluid weather-app-landscape" />
+        <img src="/images/weather-app-landscape.png" class="img-fluid project-image" />
         <br />
         <a class="btn project-links" href="/projects/weather-app-landscape/index.html" target="_blank">Go to project</a>
       </div>
 
       <!--WEATHER APP PORTRAIT SECTION-->
       <div class="col-md-6 text-center">
-        <h4 class="weather-app">Weather App-Portrait</h4>
+        <h4 class="project-title">Weather App-Portrait</h4>
         <i class="fab fa-html5 skill-icon"></i> |
         <i class="fab fa-css3-alt skill-icon"></i> |
         <i class="fab fa-js-square skill-icon"></i> |
@@ -96,14 +96,14 @@
           openweather.org.
           Check the current weather or 7 day forecast of any location around the world using the search bar or use the
           geo-location tool to find the weather in your local area. Explore the portrait version of my weather app.</p>
-        <img src="/images/weather-app-portrait.PNG" class="img-fluid weather-app-portrait" />
+        <img src="/images/weather-app-portrait.PNG" class="img-fluid project-image" />
         <br />
         <a class="btn project-links" href="/projects/weather-app-portrait/index.html" target="_blank">Go to project</a>
       </div>
 
       <!--ARCTIC MONKEYS SECTION-->
       <div class="col-md-6 text-center">
-        <h4 class="arctic-monkeys">Arctic Monkeys-Fan Page</h4>
+        <h4 class="project-title">Arctic Monkeys-Fan Page</h4>
         <i class="fab fa-html5 skill-icon"></i> |
         <i class="fab fa-css3-alt skill-icon"></i> |
         <i class="fab fa-js-square skill-icon"></i> |
@@ -114,14 +114,14 @@
         <br />
         <p>Single webpage built using HTML, CSS and Javascript prompts and alerts. Now adapted to be responsive to any
           device size.</p>
-        <img src="/images/arctic-monkeys-page.png" class="img-fluid arctic-monkeys-page" />
+        <img src="/images/arctic-monkeys-page.png" class="img-fluid project-image" />
         <br />
         <a class="btn project-links" href="/projects/arctic-monkeys/index.html" target="_blank">Go to project</a>
       </div>
 
       <!--DICTIONARY SECTION-->
       <div class="col-md-6 text-center">
-        <h4 class="weather-app">Dictionary</h4>
+        <h4 class="project-title">Dictionary</h4>
         <i class="fab fa-html5 skill-icon"></i> |
         <i class="fab fa-css3-alt skill-icon"></i> |
         <i class="fab fa-js-square skill-icon"></i> |
@@ -134,7 +134,6 @@
         <i class="fab fa-react skill-icon"></i>
         </br>
         <p>Dictionary built using React is coming soon. Come back later to explore my next project!</p>
-        <img src="" class="" />
         <a class="btn project-links" href="" target="_blank">Coming soon</a>
       </div>
     </div>
