--- a/about/about.html
+++ b/about/about.html
@@ -6,6 +6,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Eleanor Gedge currently specialises in CRM and loyalty and has an aspiration of becoming a front-end developer">
+  
   <title>ELEANOR GEDGE - ABOUT ME</title>
 
   <!--JS SECTION-->
@@ -32,17 +35,17 @@
 <body>
   <!--NAVIGATION BAR SECTION-->
   <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="/home.html"><img src="/images/eglogo.png" class="logo"></a>
+    <a class="navbar-brand" href="/home.html"><img src="/images/eglogo.png" class="logo" alt="Eleanor Gedge logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="../home.html">Home </a>
-        <a class="nav-item nav-link active" href="/about/about.html">About Me</a>
-        <a class="nav-item nav-link" href="/projects/projects.html">My Projects</a>
-        <a class="nav-item nav-link" href="/contact/contact.html">Contact Me</a>
+        <a class="nav-item nav-link active" href="../home.html" title="Eleanor Gedge homepage">Home </a>
+        <a class="nav-item nav-link" href="/about/about.html" title="Eleanor Gedge about me page">About Me</a>
+        <a class="nav-item nav-link" href="/projects/projects.html" title="Eleanor Gedge my projects page">My Projects</a>
+        <a class="nav-item nav-link" href="/contact/contact.html" title="Eleanor Gedge contact me page">Contact Me</a>
       </div>
     </div>
   </nav>
@@ -172,12 +175,12 @@
           </div>
           <div class="col-sm-6 social-icon">
             <a class="social-icon" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
-              title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
-            <a class="social-icon" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
-                class="fab fa-github"></i></a>
+              title="Eleanor Gedge Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
+            <a class="social-icon" href="https://github.com/eleanorgedge" target="_blank"
+              title="Eleanor Gedge GitHub Profile"><i class="fab fa-github"></i></a>
             <a class="social-icon" href="https://www.instagram.com/elliegedgex/" target="_blank"
-              title="Instagram Profile"><i class="fab fa-instagram"></i></a>
-            <a class="social-icon" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
+              title="Eleanor Gedge Instagram Profile"><i class="fab fa-instagram"></i></a>
+            <a class="social-icon" href="mailto:gedgeeleanor@gmail.com" title="Email Eleanor Gedge"><i
                 class="far fa-envelope"></i></a>
           </div>
         </div>
