--- a/projects/projects.html
+++ b/projects/projects.html
@@ -6,6 +6,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+      content="Eleanor Gedge is an aspiring front-end developer from Stamford, UK. Explore some of her projects 
+      including a fully functioning weather app which uses real life API data to find the weather both in searched locations and geo-locations.">
   <title>ELEANOR GEDGE - MY PROJECTS</title>
 
   <!--JS SECTION-->
@@ -32,17 +35,17 @@
 <body>
   <!--NAVIGATION BAR SECTION-->
   <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="/home.html"><img src="/images/eglogo.png" class="logo"></a>
+    <a class="navbar-brand" href="/home.html"><img src="/images/eglogo.png" class="logo" alt="Eleanor Gedge logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="../home.html">Home </a>
-        <a class="nav-item nav-link" href="/about/about.html">About Me</a>
-        <a class="nav-item nav-link active" href="/projects/projects.html">My Projects</a>
-        <a class="nav-item nav-link" href="/contact/contact.html">Contact Me</a>
+        <a class="nav-item nav-link active" href="../home.html" title="Eleanor Gedge homepage">Home </a>
+        <a class="nav-item nav-link" href="/about/about.html" title="Eleanor Gedge about me page">About Me</a>
+        <a class="nav-item nav-link" href="/projects/projects.html" title="Eleanor Gedge my projects page">My Projects</a>
+        <a class="nav-item nav-link" href="/contact/contact.html" title="Eleanor Gedge contact me page">Contact Me</a>
       </div>
     </div>
   </nav>
@@ -74,9 +77,9 @@
           openweather.org.
           Check the current weather or 7 day forecast of any location around the world using the search bar or use the
           geo-location tool to find the weather in your local area. Explore the landscape version of my weather app.</p>
-        <img src="/images/weather-app-landscape.png" class="img-fluid project-image" />
+        <img src="/images/weather-app-landscape.png" class="img-fluid project-image" alt="Eleanor Gedge weather app landscape"/>
         <br />
-        <a class="btn project-links" href="/projects/weather-app-landscape/index.html" target="_blank">Go to project</a>
+        <a class="btn project-links" href="/projects/weather-app-landscape/index.html" target="_blank" title="Eleanor Gedge weather app">Go to project</a>
       </div>
 
       <!--WEATHER APP PORTRAIT SECTION-->
@@ -96,9 +99,9 @@
           openweather.org.
           Check the current weather or 7 day forecast of any location around the world using the search bar or use the
           geo-location tool to find the weather in your local area. Explore the portrait version of my weather app.</p>
-        <img src="/images/weather-app-portrait.PNG" class="img-fluid project-image" />
+        <img src="/images/weather-app-portrait.PNG" class="img-fluid project-image" alt="Eleanor Gedge weather app portrait"/>
         <br />
-        <a class="btn project-links" href="/projects/weather-app-portrait/index.html" target="_blank">Go to project</a>
+        <a class="btn project-links" href="/projects/weather-app-portrait/index.html" target="_blank" title="Eleanor Gedge weather app">Go to project</a>
       </div>
 
       <!--ARCTIC MONKEYS SECTION-->
@@ -114,9 +117,9 @@
         <br />
         <p>Single webpage built using HTML, CSS and Javascript prompts and alerts. Now adapted to be responsive to any
           device size.</p>
-        <img src="/images/arctic-monkeys-page.png" class="img-fluid project-image" />
+        <img src="/images/arctic-monkeys-page.png" class="img-fluid project-image" alt="Eleanor Gedge Arctic Monkeys page"/>
         <br />
-        <a class="btn project-links" href="/projects/arctic-monkeys/index.html" target="_blank">Go to project</a>
+        <a class="btn project-links" href="/projects/arctic-monkeys/index.html" target="_blank" title="Eleanor Gedge Arctic Monkeys page">Go to project</a>
       </div>
 
       <!--DICTIONARY SECTION-->
@@ -148,12 +151,12 @@
           </div>
           <div class="col-sm-6 social-icon">
             <a class="social-icon" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
-              title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
-            <a class="social-icon" href="https://github.com/eleanorgedge" target="_blank" title="GitHub Profile"><i
-                class="fab fa-github"></i></a>
+              title="Eleanor Gedge Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
+            <a class="social-icon" href="https://github.com/eleanorgedge" target="_blank"
+              title="Eleanor Gedge GitHub Profile"><i class="fab fa-github"></i></a>
             <a class="social-icon" href="https://www.instagram.com/elliegedgex/" target="_blank"
-              title="Instagram Profile"><i class="fab fa-instagram"></i></a>
-            <a class="social-icon" href="mailto:gedgeeleanor@gmail.com" title="Email Ellie Gedge"><i
+              title="Eleanor Gedge Instagram Profile"><i class="fab fa-instagram"></i></a>
+            <a class="social-icon" href="mailto:gedgeeleanor@gmail.com" title="Email Eleanor Gedge"><i
                 class="far fa-envelope"></i></a>
           </div>
         </div>
