tidy up of code

--- a/about/about.html
+++ b/about/about.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Eleanor Gedge currently specialises in CRM and loyalty and has an aspiration of becoming a front-end developer">
-  
+
   <title>ELEANOR GEDGE - ABOUT ME</title>
 
   <!--JS SECTION-->
@@ -44,7 +44,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="../home.html" title="Eleanor Gedge homepage">Home </a>
         <a class="nav-item nav-link" href="/about/about.html" title="Eleanor Gedge about me page">About Me</a>
-        <a class="nav-item nav-link" href="/projects/projects.html" title="Eleanor Gedge my projects page">My Projects</a>
+        <a class="nav-item nav-link" href="/projects/projects.html" title="Eleanor Gedge my projects page">My
+          Projects</a>
         <a class="nav-item nav-link" href="/contact/contact.html" title="Eleanor Gedge contact me page">Contact Me</a>
       </div>
     </div>
@@ -72,7 +73,7 @@
           <br />
           I love creating functional and responsive website designs for optimal user experience. My career in CRM
           and the digital field has honed my passion for attention to detail and well designed, efficient
-          platforms and systems. 
+          platforms and systems.
         </p>
       </div>
 
@@ -163,7 +164,6 @@
         </div>
       </div>
     </div>
-
 
     <!--FOOTER SECTION-->
     <hr />
