--- a/projects/projects.html
+++ b/projects/projects.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-      content="Eleanor Gedge is an aspiring front-end developer from Stamford, UK. Explore some of her projects 
+  <meta name="description"
+    content="Eleanor Gedge is an aspiring front-end developer from Stamford, UK. Explore some of her projects 
       including a fully functioning weather app which uses real life API data to find the weather both in searched locations and geo-locations.">
   <title>ELEANOR GEDGE - MY PROJECTS</title>
 
@@ -44,7 +44,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="../home.html" title="Eleanor Gedge homepage">Home </a>
         <a class="nav-item nav-link" href="/about/about.html" title="Eleanor Gedge about me page">About Me</a>
-        <a class="nav-item nav-link" href="/projects/projects.html" title="Eleanor Gedge my projects page">My Projects</a>
+        <a class="nav-item nav-link" href="/projects/projects.html" title="Eleanor Gedge my projects page">My
+          Projects</a>
         <a class="nav-item nav-link" href="/contact/contact.html" title="Eleanor Gedge contact me page">Contact Me</a>
       </div>
     </div>
@@ -77,9 +78,11 @@
           openweather.org.
           Check the current weather or 7 day forecast of any location around the world using the search bar or use the
           geo-location tool to find the weather in your local area. Explore the landscape version of my weather app.</p>
-        <img src="/images/weather-app-landscape.png" class="img-fluid project-image" alt="Eleanor Gedge weather app landscape"/>
+        <img src="/images/weather-app-landscape.png" class="img-fluid project-image"
+          alt="Eleanor Gedge weather app landscape" />
         <br />
-        <a class="btn project-links" href="/projects/weather-app-landscape/index.html" target="_blank" title="Eleanor Gedge weather app">Go to project</a>
+        <a class="btn project-links" href="/projects/weather-app-landscape/index.html" target="_blank"
+          title="Eleanor Gedge weather app">Go to project</a>
       </div>
 
       <!--WEATHER APP PORTRAIT SECTION-->
@@ -99,9 +102,11 @@
           openweather.org.
           Check the current weather or 7 day forecast of any location around the world using the search bar or use the
           geo-location tool to find the weather in your local area. Explore the portrait version of my weather app.</p>
-        <img src="/images/weather-app-portrait.PNG" class="img-fluid project-image" alt="Eleanor Gedge weather app portrait"/>
+        <img src="/images/weather-app-portrait.PNG" class="img-fluid project-image"
+          alt="Eleanor Gedge weather app portrait" />
         <br />
-        <a class="btn project-links" href="/projects/weather-app-portrait/index.html" target="_blank" title="Eleanor Gedge weather app">Go to project</a>
+        <a class="btn project-links" href="/projects/weather-app-portrait/index.html" target="_blank"
+          title="Eleanor Gedge weather app">Go to project</a>
       </div>
 
       <!--ARCTIC MONKEYS SECTION-->
@@ -117,9 +122,11 @@
         <br />
         <p>Single webpage built using HTML, CSS and Javascript prompts and alerts. Now adapted to be responsive to any
           device size.</p>
-        <img src="/images/arctic-monkeys-page.png" class="img-fluid project-image" alt="Eleanor Gedge Arctic Monkeys page"/>
+        <img src="/images/arctic-monkeys-page.png" class="img-fluid project-image"
+          alt="Eleanor Gedge Arctic Monkeys page" />
         <br />
-        <a class="btn project-links" href="/projects/arctic-monkeys/index.html" target="_blank" title="Eleanor Gedge Arctic Monkeys page">Go to project</a>
+        <a class="btn project-links" href="/projects/arctic-monkeys/index.html" target="_blank"
+          title="Eleanor Gedge Arctic Monkeys page">Go to project</a>
       </div>
 
       <!--DICTIONARY SECTION-->
