--- a/contact/contact.html
+++ b/contact/contact.html
@@ -6,7 +6,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Eleanor Gedge is an aspiring front-end developer from Stamford, UK. Get in touch to work together.">
+  <meta name="description"
+    content="Eleanor Gedge is an aspiring front-end developer from Stamford, UK. Get in touch to work together.">
   <title>ELEANOR GEDGE - CONTACT ME</title>
 
   <!--JS SECTION-->
@@ -42,7 +43,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="../home.html" title="Eleanor Gedge homepage">Home </a>
         <a class="nav-item nav-link" href="/about/about.html" title="Eleanor Gedge about me page">About Me</a>
-        <a class="nav-item nav-link" href="/projects/projects.html" title="Eleanor Gedge my projects page">My Projects</a>
+        <a class="nav-item nav-link" href="/projects/projects.html" title="Eleanor Gedge my projects page">My
+          Projects</a>
         <a class="nav-item nav-link" href="/contact/contact.html" title="Eleanor Gedge contact me page">Contact Me</a>
       </div>
     </div>
@@ -57,29 +59,25 @@
     </div>
     <hr />
 
-
     <!--CONTACT ME-->
     <div>
       <h4 class="contact-me-title text-center">CONTACT ME</h4>
-      
+
       <div class="row">
         <div class="col-sm-6 contact-me">
-          <p>If you're looking for a responsive, user friendly website design, get in touch and let's work together to bring your idea to life!</p>
+          <p>If you're looking for a responsive, user-friendly website design, get in touch and let's work together to
+            bring your idea to life!</p>
         </div>
         <div class="col-sm-6 contact-icon">
           <a class="contact-icon" href="https://www.linkedin.com/in/eleanor-gedge" target="_blank"
             title="Eleanor Gedge Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
-          <a class="contact-icon" href="https://github.com/eleanorgedge" target="_blank" title="Eleanor Gedge GitHub Profile"><i
-              class="fab fa-github"></i></a>
-        <a class="contact-icon" href="mailto:gedgeeleanor@gmail.com" title="Email Eleanor Gedge"><i
+          <a class="contact-icon" href="https://github.com/eleanorgedge" target="_blank"
+            title="Eleanor Gedge GitHub Profile"><i class="fab fa-github"></i></a>
+          <a class="contact-icon" href="mailto:gedgeeleanor@gmail.com" title="Email Eleanor Gedge"><i
               class="far fa-envelope"></i></a>
         </div>
       </div>
     </div>
-
-
-
-
 
     <!--FOOTER SECTION-->
     <hr />
@@ -92,8 +90,8 @@
           <div class="col-sm-6 social-icon">
             <a class="social-icon" href="https://www.linkedin.com/in/eleanor-gedge-433b054b" target="_blank"
               title="Eleanor Gedge Linkedin Profile"><i class="fab fa-linkedin-in"></i></a>
-            <a class="social-icon" href="https://github.com/eleanorgedge" target="_blank" title="Eleanor Gedge GitHub Profile"><i
-                class="fab fa-github"></i></a>
+            <a class="social-icon" href="https://github.com/eleanorgedge" target="_blank"
+              title="Eleanor Gedge GitHub Profile"><i class="fab fa-github"></i></a>
             <a class="social-icon" href="https://www.instagram.com/elliegedgex/" target="_blank"
               title="Eleanor Gedge Instagram Profile"><i class="fab fa-instagram"></i></a>
             <a class="social-icon" href="mailto:gedgeeleanor@gmail.com" title="Email Eleanor Gedge"><i
