--- a/home.html
+++ b/home.html
@@ -43,7 +43,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="../home.html" title="Eleanor Gedge homepage">Home </a>
         <a class="nav-item nav-link" href="/about/about.html" title="Eleanor Gedge about me page">About Me</a>
-        <a class="nav-item nav-link" href="/projects/projects.html" title="Eleanor Gedge my projects page">My Projects</a>
+        <a class="nav-item nav-link" href="/projects/projects.html" title="Eleanor Gedge my projects page">My
+          Projects</a>
         <a class="nav-item nav-link" href="/contact/contact.html" title="Eleanor Gedge contact me page">Contact Me</a>
       </div>
     </div>
